fixed fonts and overflow

--- a/hw9/style/ie8style.css
+++ b/hw9/style/ie8style.css
@@ -1,57 +1,42 @@
+
 @font-face {
   font-family: 'League Gothic';
-  src: url("leaguegothic-regular-webfont.woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'League Gothic';
-  src: url("leaguegothic-regular-webfont.eot");
+  src: url('../fonts/leaguegothic-regular-webfont.eot');
+  src: url('../fonts/leaguegothic-regular-webfont.woff2') format('woff2'),
+       url('../fonts/leaguegothic-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url("opensans-regular-webfont.woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url("opensans-regular-webfont.eot");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Open Sans Light';
-  src: url("opensans-light-webfont.woff2");
+  src: url('../fonts/opensans-regular-webfont.eot');
+  src: url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+       url('../fonts/opensans-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans Light';
-  src: url("opensans-light-webfont.eot");
+  src: url('../fonts/opensans-light-webfont.eot');
+  src: url('../fonts/opensans-light-webfont.woff2') format('woff2'),
+       url('../fonts/opensans-light-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Opensans extra bold';
-  src: url("opensans-extrabold.woff2");
+  src: url('../fonts/opensans-extrabold.eot');
+  src: url('../fonts/opensans-extrabold.woff2') format('woff2'),
+       url('../fonts/opensans-extrabold.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: 'Opensans extra bold';
-  src: url("opensans-extrabold.eot");
-  font-weight: normal;
-  font-style: normal;
-}
-* {
+/* {
 	box-sizing: border-box;
 }
 html {
   overflow-x: hidden;
-}
+}*/
 div {
   height: "100%";
 }
